--- a/src/javafxapplication4/FXMLDocument.fxml
+++ b/src/javafxapplication4/FXMLDocument.fxml
@@ -1,14 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="238.0" prefWidth="412.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxapplication4.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="680.0" prefWidth="735.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxapplication4.FXMLDocumentController">
     <children>
-        <Button fx:id="button" layoutX="103.0" layoutY="94.0" onMouseClicked="#handleButtonAction" text="Click Me!" />
-      <TextField fx:id="txtField" layoutX="86.0" layoutY="40.0" />
+        <Button fx:id="button" layoutX="214.0" layoutY="315.0" onMouseClicked="#handleButtonAction" text="Click Me!" />
+      <TextField fx:id="noSwarmTextField" layoutX="214.0" layoutY="79.0" prefHeight="25.0" prefWidth="85.0" />
+      <TextField fx:id="noParticleTextField" layoutX="214.0" layoutY="127.0" prefHeight="25.0" prefWidth="85.0" />
+      <TextField fx:id="budgetTextField" layoutX="214.0" layoutY="169.0" prefHeight="25.0" prefWidth="85.0" />
+      <TextField fx:id="costCTxtField" layoutX="549.0" layoutY="126.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="costBTxtField" layoutX="549.0" layoutY="78.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="costDTxtField" layoutX="549.0" layoutY="168.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="costETxtField" layoutX="549.0" layoutY="212.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="costATxtField" layoutX="214.0" layoutY="213.0" prefHeight="25.0" prefWidth="54.0" />
+      <Label layoutX="83.0" layoutY="127.0" text="No of Particles">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="85.0" layoutY="174.0" text="Total Budget">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="338.0" layoutY="81.0" text="Cost &amp; views of ad for Web B">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="85.0" layoutY="81.0" text="No of Swarms">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="338.0" layoutY="127.0" text="Cost &amp; views of ad for Web C">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="338.0" layoutY="174.0" text="Cost &amp; views of ad for Web D">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="339.0" layoutY="215.0" text="Cost &amp; views of ad for Web E">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="18.0" layoutY="215.0" text="Cost &amp; views of ad for Web A">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label layoutX="340.0" layoutY="248.0" text="Cost &amp; views of ad for Web F">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="costFTxtField" layoutX="549.0" layoutY="246.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewBTextField" layoutX="636.0" layoutY="79.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewCTextField" layoutX="636.0" layoutY="127.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewDTextField" layoutX="636.0" layoutY="168.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewETextField" layoutX="636.0" layoutY="213.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewFTextField" layoutX="636.0" layoutY="246.0" prefHeight="25.0" prefWidth="77.0" />
+      <TextField fx:id="viewATextField" layoutX="272.0" layoutY="213.0" prefHeight="25.0" prefWidth="54.0" />
     </children>
 </AnchorPane>
